--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ header nav{
     flex: 1;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
 }  
 @media (max-width: 992px) {
     header nav {
@@ -66,7 +66,8 @@ header nav .toggle-menu {
 }
 nav .menu{
     display: flex;
-    flex-basis: 60%;
+    flex-basis: 65%;
+    justify-content: center;
 }
 @media (max-width: 992px) {
     header nav .menu li, header nav .search  {
@@ -126,7 +127,7 @@ nav .menu li a{
 }
 .search{
     width: 250px;
-    flex-basis: 40%;
+    /* flex-basis: 40%; */
 }
 .srch{
     font-family: 'Times New Roman', Times, serif;
